# restapi

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2021-01-05-094607_users/: up.sql
migrations/2021-02-15-105037_blacklist/: down.sql  up.sql
src/: main.rs  schema.rs
src/crypto/: config.rs  mod.rs
src/database/: blacklist.rs  mod.rs  models.rs  users.rs
src/elastic/: client.rs  hosts_data.rs  ips_data.rs  mod.rs  packet_count.rs  ports_data.rs
src/guards/: auth.rs  cors.rs  mod.rs
src/mongo/: connection.rs
src/routes/: delete.rs  get.rs  post.rs
