[package]
name = "backend"
version = "0.1.0"
authors = ["amit <gamesil456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
reqwest = { version = "0.10", features = ["blocking", "json"] }
base64 = "0.13.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
jsonwebtoken = "7"
rocket_contrib = {version ="0.4.6", deafult-features = false, features=["json"]}
dotenv = "0.15.0"
r2d2 = "0.8.3"
r2d2-mongodb = "*"
mongodb = "0.3.11"